--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /GHDWebAPI/.vs/GHDWebAPI/FileContentIndex/6cea6f73-9760-444d-89c8-0c0e608dfb8f.vsidx
 /GHDWebAPI/.vs/GHDWebAPI/FileContentIndex/8ef6d556-d672-41b5-b943-b0a35721635d.vsidx
 /GHDWebAPI/.vs/GHDWebAPI/FileContentIndex/9c6d7595-7f39-4834-baf8-06cc67d54af0.vsidx
+/GHDWebAPI/.vs/GHDWebAPI/FileContentIndex/3ebe8b95-91e2-412b-9228-181ea2b24413.vsidx
+/GHDWebAPI/.vs/GHDWebAPI/FileContentIndex/2f2c121f-3e35-41c7-b405-f608a2589ede.vsidx
+/GHDWebAPI/.vs/GHDWebAPI/FileContentIndex/ea34f7a0-7e0e-422d-a8bc-50b6bbd51f5a.vsidx
