Add Swagger API documentaion

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /GHDWebAPI/.vs/GHDWebAPI/FileContentIndex/3ebe8b95-91e2-412b-9228-181ea2b24413.vsidx
 /GHDWebAPI/.vs/GHDWebAPI/FileContentIndex/2f2c121f-3e35-41c7-b405-f608a2589ede.vsidx
 /GHDWebAPI/.vs/GHDWebAPI/FileContentIndex/ea34f7a0-7e0e-422d-a8bc-50b6bbd51f5a.vsidx
+/GHDWebAPI/.vs/GHDWebAPI/FileContentIndex/8ad9ded1-f0af-4e6b-850e-a0abfd71c36f.vsidx
+/GHDWebAPI/.vs/GHDWebAPI/FileContentIndex/a4e550cb-2d92-4738-90d6-3722bb3ee8c6.vsidx
