Update unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@
 /GHDWebAPI/.vs/GHDWebAPI/FileContentIndex/ea34f7a0-7e0e-422d-a8bc-50b6bbd51f5a.vsidx
 /GHDWebAPI/.vs/GHDWebAPI/FileContentIndex/8ad9ded1-f0af-4e6b-850e-a0abfd71c36f.vsidx
 /GHDWebAPI/.vs/GHDWebAPI/FileContentIndex/a4e550cb-2d92-4738-90d6-3722bb3ee8c6.vsidx
+/GHDWebAPI.Tests/bin/Debug/net8.0
+/GHDWebAPI.Tests/obj
+/GHDWebAPI/bin/Debug/net8.0
+/GHDWebAPI/.vs/GHDWebAPI/FileContentIndex/1763ca2d-6491-49a8-a384-67aac32b9f23.vsidx
+/GHDWebAPI/.vs/GHDWebAPI/FileContentIndex/d9dab04f-a511-4c1e-b651-4eca37e573f6.vsidx
+/.gitignore
+/.gitignore
